<resources>
    <string name="app_name">Contact_Client</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unloginicon">need to login</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="register">注册账号</string>
    <string name="enterPhoneNumber">请输入手机号</string>
    <string name="enterPassword">请输入6–16位密码</string>
    <string name="profile_photo">profile_photo</string>
    <string name="myaccount">我的账号</string>
    <string name="mywork">我的作品</string>
    <string name="about">关于Contact</string>
    <string name="version">版本信息</string>
    <string name="log_out">退出登录</string>
</resources>